style:fix the overflow of activity section

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ section,footer{
     border:1px solid red;
 }
 
-section{
+body{
     margin: 1rem;
 }
 header > div,nav{
@@ -29,16 +29,18 @@ a {
 .activity{
     display:flex;
     justify-content:space-evenly;
+    position:relative;
 }
 
 img{
-    width:100%;
-    height:100%;
+    max-width:100%;
+    height:auto;
 }
-.activity >  div{
+
+.activity__one,.activity__two,.activity__three {
+    display: flex;
+    flex-direction: column;
     position:relative;
-    border:1px solid red ;
-    max-height:16rem;
     max-width:32rem;
     border: 1px solid red;
 }
